# ContractAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  vercel.json
.github/workflows/: ci.yml
api/: auth.js  index.js  index.py  kv.js  requirements.txt
deploy/: README.md
deploy/kubernetes/: contractguard.yaml
docs/: MIGRATIONS.md  REFACTOR_REPORT.md
docs/audit-20260718/: README.md
examples/: README.md  示例软件服务合同.md
frontend/: .env.production  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: analytics.ts  auth.ts  client.ts  operations.ts  reviews.ts  templates.ts
frontend/src/composables/: usePermission.ts
frontend/src/locales/: zh-CN.ts
frontend/src/router/: index.ts
frontend/src/stores/: app.ts  auth.ts  theme.ts
frontend/src/styles/: variables.css
frontend/src/types/: api.ts
frontend/src/views/: HomeView.vue
resources/: README.md  demo_risk_rules.json
scripts/: manage_db.py
src/contract_guard/: __init__.py  config.py  main.py
src/contract_guard/agent/: __init__.py  state.py  workflow.py
src/contract_guard/api/: __init__.py  analytics_routes.py  analytics_schemas.py  auth_routes.py  auth_schemas.py  compare_routes.py  dependencies.py  errors.py  operations_routes.py  operations_schemas.py  routes.py  schemas.py  template_routes.py  template_schemas.py  workspace_routes.py
src/contract_guard/domain/: models.py  (+2 more)
tests/: test_api.py  test_auth_workspace.py  test_config.py  test_distribution.py  test_documents.py  test_knowledge.py  test_main_integration.py  test_memory_context.py  test_migrations.py  test_operations_api.py  test_operations_storage.py  test_rules.py  test_storage.py  test_vision.py  test_workflow.py
tests/fixtures/: clean_contract.txt  sample_contract.txt
work/ui-wheel/: contractguard-0.1.0-py3-none-any.whl
work/wheels/: contractguard-0.1.0-py3-none-any.whl
(+101 files in other folders)
