[build-system]
requires = ["setuptools>=75,<82", "wheel>=0.45,<1"]
build-backend = "setuptools.build_meta"

[project]
name = "contractguard"
version = "0.1.0"
description = "Traceable contract risk review API with deterministic rules and optional AI assistance."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "ContractGuard Contributors" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "pydantic-settings>=2.7,<3",
  "python-dotenv>=1.0,<2",
  "python-multipart>=0.0.20,<1",
  "openai>=1.60,<3",
  "langchain-openai>=0.3,<2",
  "langgraph>=0.2,<2",
  "PyMuPDF>=1.25,<2",
  "python-docx>=1.1,<2",
  "httpx>=0.28,<1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "mypy>=1.15,<2",
  "setuptools>=75,<82",
  "wheel>=0.45,<1",
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "ruff>=0.9,<1",
]
prod = [
  "redis>=5.2,<7",
  "aiokafka>=0.12,<1",
  "neo4j>=5.27,<7",
  "pymilvus>=2.5,<3",
  "PyMySQL>=1.1,<2",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
contract_guard = ["web/**/*", "resources/*.json"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]
